Your commit message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
  .nav-link:hover{
    color: black !important;
  }
+ img{
+  height: 70px;
+ }
  .container-lg{
   gap: 200px !important;
 
@@ -39,6 +42,7 @@
     margin-top: 70px !important;
   }
   .textpart{
+   
     display: flex;
     justify-content: center;
     align-self: center;
@@ -59,7 +63,7 @@
  <div class="contain">
    <nav class="navbar navbar-expand-lg py-5">
     <div class="container-lg justify-content-around">
-    <a class="navbar-brand" href="#"><img src="https://pulseapp.com/img/pulse-logo.svg" alt=""></a>
+    <a class="navbar-brand" href="#"><img  src="https://pulseapp.com/img/pulse-logo.svg" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
